--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#142850"
     tools:context=".Dashboard">
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_marginTop="64dp"
         android:text="Welcome"
         android:textSize="18sp"
+        android:textColor="#00909e"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,6 +26,9 @@
         android:layout_marginStart="152dp"
         android:layout_marginBottom="76dp"
         android:text="Logout"
+        android:textColor="#00909e"
+        android:background="@drawable/roundbutton"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
