--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/log"
+    android:background="#142850"
 
     tools:context=".MainActivity">
 
@@ -16,22 +16,12 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="118dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hi."
-            android:layout_gravity="center_horizontal"
-            android:textColor="@color/white"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-bold"
-            android:layout_marginTop="65dp"
-            android:layout_centerHorizontal="true"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Let's get Started"
-            android:textColor="@color/white"
+            android:textColor="#00909e"
             android:textStyle="bold"
             android:textSize="28sp"
             android:layout_gravity="center_horizontal"
@@ -46,7 +36,7 @@
             android:layout_height="229.6dp"
             android:layout_marginTop="220dp"
             android:layout_marginLeft="35dp"
-            app:cardBackgroundColor="@color/LavenderBlush"
+            app:cardBackgroundColor="#27496d"
             app:cardCornerRadius="30dp"
             android:background="@drawable/round"
             app:cardElevation="200dp"
@@ -60,7 +50,7 @@
                 android:text="Mobile No"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/Pink"
+                android:textColor="#00909e"
                 android:layout_marginTop="65dp"
                 android:layout_marginLeft="27dp"
                 android:textAllCaps="true"
@@ -71,10 +61,11 @@
                 android:layout_width="fill_parent"
                 android:hint="Enter 10 Digit Number"
                 android:layout_height="44dp"
-                android:textColorHint="@color/Pink"
+                android:textColorHint="#00909e"
                 android:layout_marginLeft="21dp"
                 android:layout_marginTop="97.5dp"
                 android:inputType="phone"
+                android:textColor="#00909e"
                 android:maxLength="10"
                 android:singleLine="true"
 
@@ -89,7 +80,7 @@
                 android:textStyle="bold"
                 android:background="@drawable/roundbutton"
                 android:text="Proceed"
-                android:textColor="@color/Pink"
+                android:textColor="#00909e"
                 android:elevation="50dp"/>
 
 
