--- a/app/src/main/res/layout/activity_verifypage.xml
+++ b/app/src/main/res/layout/activity_verifypage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/log"
+    android:background="#142850"
     tools:context=".Verifypage">
 
     <RelativeLayout
@@ -32,18 +32,11 @@
                 android:layout_marginLeft="90dp"
                 android:layout_marginTop="180dp"
                 android:text=""
-                android:textColor="@color/white"
+                android:textColor="#00909e"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/otp_mobile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="4dp"
-                android:textColor="@color/grey1"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+
 
         </LinearLayout>
 
@@ -55,7 +48,7 @@
             android:layout_marginTop="277dp"
             android:layout_marginBottom="283dp"
             android:text="OTP"
-            android:textColor="@color/white"
+            android:textColor="#00909e"
             android:textSize="23sp"
             android:textStyle="bold" />
 
@@ -68,7 +61,7 @@
             android:layout_marginTop="272dp"
             android:layout_marginBottom="278dp"
             android:background="@drawable/roundbutton"
-            android:backgroundTint="@color/white"
+            android:textColor="#00909e"
             android:elevation="50dp"
             android:maxLength="6" />
 
@@ -79,11 +72,11 @@
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="08dp"
             android:layout_marginBottom="85dp"
-            android:background="@drawable/submitbutton"
+            android:background="@drawable/roundbutton"
             android:elevation="50dp"
             android:padding="3dp"
             android:text="Submit"
-            android:textColor="#FFFF"
+            android:textColor="#00909e"
             android:textSize="17sp"
             android:textStyle="bold" />
 
@@ -101,7 +94,7 @@
             android:background="@drawable/roundbutton"
             android:elevation="50dp"
             android:text="Resend OTP"
-            android:textColor="@color/Gray"
+            android:textColor="#00909e"
             android:textStyle="bold" />
     </RelativeLayout>
 
